# llm-azure

./: README.md  example-config.yaml  llm_azure.py  pyproject.toml
.github/workflows/: publish.yml
llm_azure/: __init__.py  anthropic.py  openai.py
tests/: test_azure_anthropic.py  test_azure_openai.py  test_capabilities.py  test_llm_azure.py
