[project]
name = "llm-azure"
version = "1.0"
description = "Azure plugin for LLM using the AzureOpenAI class"
readme = "README.md"
authors = [{name = "Fabian Geiger"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm",
]

[project.urls]
Homepage = "https://github.com/fabge/llm-azure"
Changelog = "https://github.com/fabge/llm-azure/releases"
Issues = "https://github.com/fabge/llm-azure/issues"
CI = "https://github.com/fabge/llm-azure/actions"

[project.entry-points.llm]
azure = "llm_azure"
